tests/snapshots/list_journals__should_list_all_daily_journal_in_months.snap
---
source: tests/list_journals.rs
expression: daily_journals_in_month
---
- 2023 03 09
- 2023 03 08

