tests/snapshots/list_journals__should_list_all_daily_journals.snap
---
source: tests/list_journals.rs
expression: all_daily_journals
---
- 2023 03 09
- 2023 03 08
- 2023 02 02
- 1999 02 21
- 1999 01 21
- 1988 11 22
- 1788 08 12

