tests/snapshots/list_journals__should_list_all_daily_journals_in_certain_year.snap
---
source: tests/list_journals.rs
expression: all_daily_journals
---
- 2023 03 09
- 2023 03 08
- 2023 02 02

