tests/snapshots/list_journals__should_list_all_monthly_journals.snap
---
source: tests/list_journals.rs
expression: all_monthly_journals
---
- 2002 11
- 2002 2
- 2001 2
- 2001 1

